nullaway_error_9a611a92-debc-49c7-8b62-e6bd934c2b28.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:2532: error: [NullAway] dereferenced expression entity.movement() is @Nullable
      entity.movement().apply(force);
                       ^
    (see http://t.uber.com/nullaway )
